--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,15 +24,12 @@ jobs:
 
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: /home/runner/work/linked-lovelace-ui/linked-lovelace-ui/dist/linked-lovelace-ui.js
-          asset_name: linked-lovelace-ui.js
+          file: /home/runner/work/default-dashboard/default-dashboard/dist/default-dashboard.js
+          asset_name: default-dashboard.js
           tag: ${{ github.ref }}
           overwrite: true
-  validate:
-    runs-on: "ubuntu-latest"
-    steps:
-        - uses: "actions/checkout@v2"
-        - name: HACS Action
-          uses: "hacs/action@main"
-          with:
-            category: "plugin"
+      - uses: "actions/checkout@v2"
+      - name: HACS Action
+        uses: "hacs/action@main"
+        with:
+          category: "plugin"
