--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "default-dashboard",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "Sets the default dashboard for lovelace automatically",
   "keywords": [
     "home-assistant",
@@ -15,20 +15,8 @@
   "author": "DARE <me@daredoes.work>",
   "license": "MIT",
   "dependencies": {
-    "@lit-labs/scoped-registry-mixin": "^1.0.0",
-    "@material/mwc-formfield": "^0.25.3",
-    "@material/mwc-list": "^0.25.3",
-    "@material/mwc-menu": "^0.25.3",
-    "@material/mwc-notched-outline": "^0.25.3",
-    "@material/mwc-ripple": "^0.25.3",
-    "@material/mwc-select": "^0.25.3",
-    "@material/mwc-switch": "^0.25.3",
-    "@material/mwc-textfield": "^0.25.3",
-    "@mdi/js": "^7.0.96",
     "custom-card-helpers": "^1.7.2",
-    "home-assistant-js-websocket": "^5.11.1",
-    "lit": "^2.0.0",
-    "yaml": "1.10.0"
+    "home-assistant-js-websocket": "^5.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
@@ -51,12 +39,6 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
     "typescript": "^4.4.3"
-  },
-  "resolutions": {
-    "lit": "^2.1.2",
-    "lit-html": "2.1.2",
-    "lit-element": "3.1.2",
-    "@lit/reactive-element": "1.2.1"
   },
   "scripts": {
     "start": "export ROLLUP_WATCH=true && rollup -c --watch",
